@@ -90,9 +90,9 @@ static Statement *_saveStatement = NULL;
 	if (dueDate && ([now compare:dueDate] == NSOrderedSame))
 		return TASKSTATUS_DUETODAY;
 	
-	if (startDate)
+	if (startDate && ([now compare:startDate] == NSOrderedDescending))
 		return TASKSTATUS_STARTED;
-	
+
 	return TASKSTATUS_NOTSTARTED;
 }
 
